option java_outer_classname = "LCBroadcastNodeInfo";


option java_package = "com.navinfo.opentsp.platform.location.protocol.nodecluster";

import "core/proto/nodecluster/common/java/NodeInfo.proto";

message BroadcastNodeInfo{
	repeated	NodeInfo	nodes		=1;
}
